@@ -1,3 +1,6 @@
+* Applying rollbacks which included overlapping files would fail unless
+  --replace-files was used
+
 Changes in 1.0.12:
   o Client changes:
     * The rollback command now applies rollbacks up to and including
